--- a/public/static/fonts_9/icomoon.css
+++ b/public/static/fonts_9/icomoon.css
@@ -1,10 +1,9 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('./icomoon.eot?r77vn3');
-  src:  url('./icomoon.eot?r77vn3#iefix') format('embedded-opentype'),
-    url('./icomoon.ttf?r77vn3') format('truetype'),
-    url('./icomoon.woff?r77vn3') format('woff'),
-    url('./icomoon.svg?r77vn3#icomoon') format('svg');
+  src:
+    url('icomoon.ttf?80wu1l') format('truetype'),
+    url('icomoon.woff?80wu1l') format('woff'),
+    url('icomoon.svg?80wu1l#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -27,9 +26,6 @@
 
 .icon-send:before {
   content: "\e900";
-}
-.icon-send1:before {
-  content: "\e901";
 }
 .icon-pen:before {
   content: "\e908";
@@ -76,6 +72,12 @@
 .icon-flag:before {
   content: "\e9cc";
 }
+.icon-eye:before {
+  content: "\e9ce";
+}
+.icon-eye-blocked:before {
+  content: "\e9d1";
+}
 .icon-attention:before {
   content: "\e9d3";
 }
@@ -121,102 +123,12 @@
 .icon-github:before {
   content: "\eab0";
 }
-.icon-pen1:before {
-  content: "\e909";
-}
-.icon-image1:before {
-  content: "\e90e";
-}
-.icon-mic1:before {
-  content: "\e91f";
-}
-.icon-textfile1:before {
-  content: "\e927";
-}
-.icon-history1:before {
-  content: "\e94e";
-}
-.icon-reply1:before {
-  content: "\e96c";
-}
-.icon-quote1:before {
-  content: "\e978";
-}
-.icon-loading1:before {
-  content: "\e97a";
-}
-.icon-login1:before {
-  content: "\e98e";
-}
-.icon-settings1:before {
-  content: "\e995";
-}
-.icon-stats1:before {
-  content: "\e99c";
-}
-.icon-fire1:before {
-  content: "\e9aa";
-}
-.icon-locate1:before {
-  content: "\e9b4";
-}
-.icon-upload1:before {
-  content: "\e9c4";
-}
-.icon-flag1:before {
-  content: "\e9cd";
-}
-.icon-eye:before {
-  content: "\e9ce";
-}
-.icon-eye-blocked:before {
-  content: "\e9d1";
-}
-.icon-attention1:before {
-  content: "\e9d4";
-}
-.icon-star1:before {
-  content: "\e9d8";
-}
-.icon-star-ok1:before {
-  content: "\e9da";
-}
-.icon-plus1:before {
-  content: "\ea0b";
-}
-.icon-about1:before {
-  content: "\ea0d";
-}
-.icon-close1:before {
-  content: "\ea0f";
-}
-.icon-logout1:before {
-  content: "\ea15";
-}
-.icon-play1:before {
-  content: "\ea17";
-}
-.icon-pause1:before {
-  content: "\ea19";
-}
-.icon-refresh1:before {
-  content: "\ea2f";
-}
-.icon-forward1:before {
-  content: "\ea43";
-}
-.icon-back1:before {
-  content: "\ea45";
-}
-.icon-order-rev1:before {
-  content: "\ea47";
-}
-.icon-order-rev-down1:before {
-  content: "\ea49";
-}
-.icon-github1:before {
-  content: "\eab1";
-}
 .icon-how_to_vote:before {
   content: "\e91ca";
+}
+.icon-bell:before {
+  content: "\e951";
+}
+.icon-bubble:before {
+  content: "\e96c";
 }
